--- a/sections/MethodologySection/Methodology.module.css
+++ b/sections/MethodologySection/Methodology.module.css
@@ -85,6 +85,9 @@
 .cardWrapper {
     position: relative;
     z-index: 1;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
     transition: all 0.3s ease;
 }
 
